--- a/configuration/binoc/royalgeekworld/nginx/CMakeLists.txt
+++ b/configuration/binoc/royalgeekworld/nginx/CMakeLists.txt
@@ -1,67 +1,91 @@
+# ===| Macros |================================================================
+
 build_macro_mkPaths()
 SETUP_FINAL_TARGET()
 AURA_DEFINES()
 
+# =============================================================================
 
-# Userscope Nginx systemd Service
+# ===| User Nginx Instance SystemD Unit |======================================
+
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.service.in
     ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-nginx.service
     ${varAuraDefines}
 )
 
-# Userscope Nginx Server Instance
+# =============================================================================
+
+# ===| User Nginx Server Configuration |=======================================
+
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
     ${FINAL_TARGET}/nginx.conf
     ${varAuraDefines}
 )
 
-# Proxy file for royalgeekworld.com
-set(varDomain "royalgeekworld.com")
-build_func_preprocess(
-    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
-    ${FINAL_TARGET}/www.${varDomain}.proxy
+# =============================================================================
+
+# ===| www.royalgeekworld.com |================================================
+
+# Set Variables to be used as Preprocessor defines
+set(varRootDomain "royalgeekworld.com")
+set(varSubDomain "www")
+set(varNginxDefines
     ${varAuraDefines}
-    -DNGX_DOMAIN="${varDomain}"
+    -DNGX_ROOTDOMAIN="${varRootDomain}"
+    -DNGX_SUBDOMAIN="${varSubDomain}"
     -DNGX_MAINDOMAIN=1
-)
-
-# VHOST for royalgeekworld.com
-set(varSubdomain "www")
-set(varRootDomain "royalgeekworld.com")
-set(varDomain ${varRootDomain})
-build_func_preprocess(
-    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
-    ${FINAL_TARGET}/www.${varDomain}.vhost
-    ${varAuraDefines}
-    -DNGX_DOMAIN="${varDomain}"
-    -DNGX_ROOTDOMAIN="${varRootDomain}"
-    -DNGX_SUBDOMAIN="${varSubdomain}"
     -DNGX_ENABLE_PHP=1
+    -DNGX_ENABLE_PHP_404=1
     -DNGX_ENABLE_ENANO=1
+    -DPHP_VERSION_70=1
 )
 
-# Proxy file for ccfans.royalgeekworld.com
-set(varDomain "ccfans.royalgeekworld.com")
+# Proxy file
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
-    ${FINAL_TARGET}/${varDomain}.proxy
-    ${varAuraDefines}
-    -DNGX_DOMAIN="${varDomain}"
+    ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.proxy
+    ${varNginxDefines}
 )
 
-# VHOST for ccfans.royalgeekworld.com
-set(varSubdomain "ccfans")
-set(varRootDomain "royalgeekworld.com")
-set(varDomain "${varSubdomain}.${varRootDomain}")
+# VHost file
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
-    ${FINAL_TARGET}/${varDomain}.vhost
-    ${varAuraDefines}
-    -DNGX_DOMAIN="${varDomain}"
-    -DNGX_ROOTDOMAIN="${varRootDomain}"
-    -DNGX_SUBDOMAIN="${varSubdomain}"
-    -DNGX_ENABLE_PHP=1
-    -DNGX_ENABLE_ENANO=1
+    ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.vhost
+    ${varNginxDefines}
 )
+
+# =============================================================================
+
+# ===| ccfans.royalgeekworld.com |=============================================
+
+# Set Variables to be used as Preprocessor defines
+set(varRootDomain "royalgeekworld.com")
+set(varSubDomain "ccfans")
+set(varNginxDefines
+    ${varAuraDefines}
+    -DNGX_ROOTDOMAIN="${varRootDomain}"
+    -DNGX_SUBDOMAIN="${varSubDomain}"
+    -DNGX_ENABLE_PHP=1
+    -DNGX_ENABLE_PHP_404=1
+    -DNGX_ENABLE_ENANO=1
+    -DPHP_VERSION_70=1
+)
+
+# Proxy file
+build_func_preprocess(
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
+    ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.proxy
+    ${varNginxDefines}
+)
+
+# VHost file
+build_func_preprocess(
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
+    ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.vhost
+    ${varNginxDefines}
+)
+
+# =============================================================================
+
