--- a/configuration/unaffiliated/kokomosaferefuge/nginx/CMakeLists.txt
+++ b/configuration/unaffiliated/kokomosaferefuge/nginx/CMakeLists.txt
@@ -1,44 +1,58 @@
+# ===| Macros |================================================================
+
 build_macro_mkPaths()
 SETUP_FINAL_TARGET()
 AURA_DEFINES()
 
+# =============================================================================
 
-# Userscope Nginx systemd Service
+# ===| User Nginx Instance SystemD Unit |======================================
+
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.service.in
     ${FINAL_TARGET}/aura-${varUserClass}-${varUserName}-nginx.service
     ${varAuraDefines}
 )
 
-# Userscope Nginx Server Instance
+# =============================================================================
+
+# ===| User Nginx Server Configuration |=======================================
+
 build_func_preprocess(
     ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/nginx.conf.in
     ${FINAL_TARGET}/nginx.conf
     ${varAuraDefines}
 )
 
-# Proxy file for kokomosaferefuge.org
-set(varDomain "kokomosaferefuge.org")
-build_func_preprocess(
-    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
-    ${FINAL_TARGET}/www.${varDomain}.proxy
-    ${varAuraDefines}
-    -DNGX_DOMAIN="${varDomain}"
-    -DNGX_MAINDOMAIN=1
-)
+# =============================================================================
 
-# VHOST for susantobinart.com
-set(varSubdomain "www")
+# ===| www.kokomosaferefuge.org |==============================================
+
+# Set Variables to be used as Preprocessor defines
 set(varRootDomain "kokomosaferefuge.org")
-set(varDomain ${varRootDomain})
-build_func_preprocess(
-    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
-    ${FINAL_TARGET}/www.${varDomain}.vhost
+set(varSubDomain "www")
+set(varNginxDefines
     ${varAuraDefines}
-    -DNGX_DOMAIN="${varDomain}"
     -DNGX_ROOTDOMAIN="${varRootDomain}"
-    -DNGX_SUBDOMAIN="${varSubdomain}"
+    -DNGX_SUBDOMAIN="${varSubDomain}"
+    -DNGX_MAINDOMAIN=1
     -DNGX_ENABLE_PHP=1
     -DNGX_ENABLE_WORDPRESS=1
-    -DPHP_VERSION_56=1
+    -DPHP_VERSION_70=1
 )
+
+# Proxy file
+build_func_preprocess(
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
+    ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.proxy
+    ${varNginxDefines}
+)
+
+# VHost file
+build_func_preprocess(
+    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
+    ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.vhost
+    ${varNginxDefines}
+)
+
+# =============================================================================
