--- a/templates/nginx/standard.vhost.in
+++ b/templates/nginx/standard.vhost.in
@@ -1,6 +1,10 @@
     server {
         listen unix:/var/run/aura-@AURA_USER_CLASS@-@AURA_USER_NAME@-nginx.socket;
-        server_name    @NGX_DOMAIN@;
+#ifdef NGX_MAINDOMAIN
+        server_name @NGX_ROOTDOMAIN@;
+#else
+        server_name @NGX_SUBDOMAIN@.@NGX_ROOTDOMAIN@;
+#endif
 #ifdef NGX_OVERRIDE_SUBDOMAIN
         root /aura/accounts/@AURA_USER_CLASS@/@AURA_USER_NAME@/sites/@NGX_ROOTDOMAIN@/@NGX_OVERRIDE_SUBDOMAIN@;
 #else
