--- a/configuration/system/bind/binocnetwork.com.zone.in
+++ b/configuration/system/bind/binocnetwork.com.zone.in
@@ -24,11 +24,13 @@ $TTL 3600
 ns2					IN	AAAA	@AURA_IPV6@
 quartz.server		IN	AAAA	@AURA_IPV6@
 regolith.server		IN	AAAA	2607:ff48:1:302::53cf:d149 ; Regolith IPv4
+ratty.hosted        IN	A		@AURA_IPV6@
 
 ; Sub-domain IPv4 Records
 ns1					IN	A		@AURA_IPV4@
 quartz.server		IN	A		@AURA_IPV4@
 regolith.server		IN	A		173.44.61.210 ; Regolith IPv4
+ratty.hosted        IN	A		@AURA_IPV4@
 
 ; Sub-domain CNAME Records
 www					IN	CNAME	@BIND_DOMAIN@.
