--- a/configuration/unaffiliated/CMakeLists.txt
+++ b/configuration/unaffiliated/CMakeLists.txt
@@ -4,3 +4,4 @@ set(varUserClass "unaffiliated")
 # Add subdirectories
 add_subdirectory(dovedesign)
 add_subdirectory(kokomosaferefuge)
+add_subdirectory(ratty)
