Add some new sites to binocnetwork

--- a/configuration/binoc/binocnetwork/nginx/CMakeLists.txt
+++ b/configuration/binoc/binocnetwork/nginx/CMakeLists.txt
@@ -27,33 +27,33 @@ build_func_preprocess(
 # =============================================================================
 
 # ===| www.binocnetwork.com |==================================================
+if(varTargetServerQuartz)
+    # Set Variables to be used as Preprocessor defines
+    set(varRootDomain "binocnetwork.com")
+    set(varSubDomain "www")
+    set(varNginxDefines
+        ${varAuraDefines}
+        -DNGX_ROOTDOMAIN="${varRootDomain}"
+        -DNGX_SUBDOMAIN="${varSubDomain}"
+        -DNGX_MAINDOMAIN=1
+        -DNGX_ENABLE_PHP=1
+        -DPHP_VERSION_70=1
+    )
 
-# Set Variables to be used as Preprocessor defines
-set(varRootDomain "binocnetwork.com")
-set(varSubDomain "www")
-set(varNginxDefines
-    ${varAuraDefines}
-    -DNGX_ROOTDOMAIN="${varRootDomain}"
-    -DNGX_SUBDOMAIN="${varSubDomain}"
-    -DNGX_MAINDOMAIN=1
-    -DNGX_ENABLE_PHP=1
-    -DPHP_VERSION_70=1
-)
+    # Proxy file
+    build_func_preprocess(
+        ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
+        ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.proxy
+        ${varNginxDefines}
+    )
 
-# Proxy file
-build_func_preprocess(
-    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
-    ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.proxy
-    ${varNginxDefines}
-)
-
-# VHost file
-build_func_preprocess(
-    ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
-    ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.vhost
-    ${varNginxDefines}
-)
-
+    # VHost file
+    build_func_preprocess(
+        ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
+        ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.vhost
+        ${varNginxDefines}
+    )
+endif()
 # =============================================================================
 
 # ===| operations.binocnetwork.com |===========================================
@@ -88,4 +88,90 @@ build_func_preprocess(
     ${varNginxDefines}
 )
 
+# =============================================================================
+
+# ===| pastebin.service.binocnetwork.com |=====================================
+if(varTargetServerQuartz)
+    # Set Variables to be used as Preprocessor defines
+    set(varRootDomain "binocnetwork.com")
+    set(varSubDomain "pastebin.service")
+    set(varNginxDefines
+        ${varAuraDefines}
+        -DNGX_ROOTDOMAIN="${varRootDomain}"
+        -DNGX_SUBDOMAIN="${varSubDomain}"
+        -DNGX_OVERRIDE_SUBDOMAIN="pastebin"
+        -DNGX_ENABLE_PHP=1
+        -DPHP_VERSION_56=1
+    )
+
+    # Proxy file
+    build_func_preprocess(
+        ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
+        ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.proxy
+        ${varNginxDefines}
+    )
+
+    # VHost file
+    build_func_preprocess(
+        ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
+        ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.vhost
+        ${varNginxDefines}
+    )
+endif()
+# =============================================================================
+
+# ===| xr.service.binocnetwork.com |===========================================
+if(varTargetServerQuartz)
+    # Set Variables to be used as Preprocessor defines
+    set(varRootDomain "binocnetwork.com")
+    set(varSubDomain "xr.service")
+    set(varNginxDefines
+        ${varAuraDefines}
+        -DNGX_ROOTDOMAIN="${varRootDomain}"
+        -DNGX_SUBDOMAIN="${varSubDomain}"
+        -DNGX_OVERRIDE_SUBDOMAIN="xr"
+    )
+
+    # Proxy file
+    build_func_preprocess(
+        ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
+        ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.proxy
+        ${varNginxDefines}
+    )
+
+    # VHost file
+    build_func_preprocess(
+        ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
+        ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.vhost
+        ${varNginxDefines}
+    )
+endif()
+# =============================================================================
+
+# ===| git.service.binocnetwork.com |==========================================
+if(varTargetServerQuartz)
+    # Set Variables to be used as Preprocessor defines
+    set(varRootDomain "binocnetwork.com")
+    set(varSubDomain "git.service")
+    set(varNginxDefines
+        ${varAuraDefines}
+        -DNGX_ROOTDOMAIN="${varRootDomain}"
+        -DNGX_SUBDOMAIN="${varSubDomain}"
+        -DNGX_OVERRIDE_SUBDOMAIN="git"
+    )
+
+    # Proxy file
+    build_func_preprocess(
+        ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.proxy.in
+        ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.proxy
+        ${varNginxDefines}
+    )
+
+    # VHost file
+    build_func_preprocess(
+        ${mk_depth}/projects/${BUILD_PROJECT}/templates/nginx/standard.vhost.in
+        ${FINAL_TARGET}/${varSubDomain}.${varRootDomain}.vhost
+        ${varNginxDefines}
+    )
+endif()
 # =============================================================================
