Enable PHP 5.6 for valik

--- a/configuration/staff/valik/nginx/CMakeLists.txt
+++ b/configuration/staff/valik/nginx/CMakeLists.txt
@@ -36,6 +36,8 @@ set(varNginxDefines
     -DNGX_ROOTDOMAIN="${varRootDomain}"
     -DNGX_SUBDOMAIN="${varSubDomain}"
     -DNGX_OVERRIDE_SUBDOMAIN="hosted"
+    -DNGX_ENABLE_PHP=1
+    -DPHP_VERSION_56=1
 )
 
 # Proxy file
