Only allow defined zones to be queried

--- a/configuration/system/bind/named.conf.in
+++ b/configuration/system/bind/named.conf.in
@@ -16,7 +16,7 @@
 		listen-on-v6 port 53 { any; };
 		
 	// Allow
-		allow-query     { any; };
+		allow-query     { localhost; };
 		
 	// Dirs
 		directory 	"/var/named";
