--- a/configuration/system/bind/named.inc.in
+++ b/configuration/system/bind/named.inc.in
@@ -1,39 +1,47 @@
 zone "binocnetwork.com" {
-	type master;
-	file "/@BIND_CONF_PREFIX@/binocnetwork.com.zone";
+    type master;
+    file "/@BIND_CONF_PREFIX@/binocnetwork.com.zone";
+    allow-query { any; };
 };
 
 zone "binocglobal.com" {
-	type master;
-	file "/@BIND_CONF_PREFIX@/binocglobal.com.zone";
+    type master;
+    file "/@BIND_CONF_PREFIX@/binocglobal.com.zone";
+    allow-query { any; };
 };
 
 zone "binaryoutcast.com" {
-	type master;
-	file "/@BIND_CONF_PREFIX@/binaryoutcast.com.zone";
+    type master;
+    file "/@BIND_CONF_PREFIX@/binaryoutcast.com.zone";
+    allow-query { any; };
 };
 
 zone "mattatobin.com" {
-	type master;
-	file "/@BIND_CONF_PREFIX@/mattatobin.com.zone";
+    type master;
+    file "/@BIND_CONF_PREFIX@/mattatobin.com.zone";
+    allow-query { any; };
 };
 
 zone "royalgeekworld.com" {
-	type master;
-	file "/@BIND_CONF_PREFIX@/royalgeekworld.com.zone";
+    type master;
+    file "/@BIND_CONF_PREFIX@/royalgeekworld.com.zone";
+    allow-query { any; };
 };
 
 zone "royalgeekworld.net" {
-	type master;
-	file "/@BIND_CONF_PREFIX@/royalgeekworld.net.zone";
+    type master;
+    file "/@BIND_CONF_PREFIX@/royalgeekworld.net.zone";
+    allow-query { any; };
 };
 
 zone "susantobinart.com" {
-	type master;
-	file "/@BIND_CONF_PREFIX@/susantobinart.com.zone";
+    type master;
+    file "/@BIND_CONF_PREFIX@/susantobinart.com.zone";
+    allow-query { any; };
 };
 
 zone "kokomosaferefuge.org" {
-	type master;
-	file "/@BIND_CONF_PREFIX@/kokomosaferefuge.org.zone";
+    type master;
+    file "/@BIND_CONF_PREFIX@/kokomosaferefuge.org.zone";
+    allow-query { any; };
 };
