Establish UNIX user ids and the concept of user ports.
Port - Use
=====================
1UID0 - Reserved
1UID1 - Icecast
1UID2 - Standard FTP
1UID3 - Unassigned
1UID4 - Unassigned
1UID5 - Unassigned
1UID6 - ZNC
1UID7 - Second Service
1UID8 - Apache or another web service
1UID9 - The Palace

For example UNIX user 'binocnetwork' is UID 1200 (12xx is BinOC) so each shell user gets 10 ports which are their 1UID + # which is defined here so apache either public or localhost would live on port 12008. Aura will be modified to reflect this.

Another example is UNIX user 'newtobinparadigm' is UID 1250 would have Standard FTP living on port 12502.

Where possible web servers and services using localhost SHOULD use a UNIX Socket rather than a TCP port and be proxied from nginx.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,17 @@ if((BINOC_BUILD) AND (NOT CMAKE_BINARY_DIR MATCHES CMAKE_SOURCE_DIR))
             -DAURA_IPV6="${varSystemIPv6}"
             -DAURA_USER_CLASS="${varUserClass}"
             -DAURA_USER_NAME="${varUserName}"
+            -DAURA_USER_ID="${varUserID}"
+            -DAURA_USER_PORT0="${varUserID}0"
+            -DAURA_USER_PORT1="${varUserID}1"
+            -DAURA_USER_PORT2="${varUserID}2"
+            -DAURA_USER_PORT3="${varUserID}3"
+            -DAURA_USER_PORT4="${varUserID}4"
+            -DAURA_USER_PORT5="${varUserID}5"
+            -DAURA_USER_PORT6="${varUserID}6"
+            -DAURA_USER_PORT7="${varUserID}7"
+            -DAURA_USER_PORT8="${varUserID}8"
+            -DAURA_USER_PORT9="${varUserID}9"
         )
     endmacro(AURA_DEFINES)
     ### If the build script variable is not blank then evaluate it
