--- a/configuration/binoc/binaryoutcast/CMakeLists.txt
+++ b/configuration/binoc/binaryoutcast/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Set information about this user
 set(varUserName "binaryoutcast")
+set(varUserID "1201")
 
 add_subdirectory(nginx)
 add_subdirectory(php)
