--- a/configuration/binoc/binocnetwork/CMakeLists.txt
+++ b/configuration/binoc/binocnetwork/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Set information about this user
 set(varUserName "binocnetwork")
+set(varUserID "1200")
 
 add_subdirectory(nginx)
 add_subdirectory(php)
