--- a/configuration/unaffiliated/kokomosaferefuge/CMakeLists.txt
+++ b/configuration/unaffiliated/kokomosaferefuge/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Set information about this user
 set(varUserName "kokomosaferefuge")
+set(varUserID "1301")
 
 # Add Subdirectories
 add_subdirectory(nginx)
