--- a/configuration/unaffiliated/ratty/CMakeLists.txt
+++ b/configuration/unaffiliated/ratty/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Set information about this user
 set(varUserName "ratty")
+set(varUserID "1302")
 
 # Add Subdirectories
 add_subdirectory(apache)
