--- a/configuration/binoc/royalgeekworld/CMakeLists.txt
+++ b/configuration/binoc/royalgeekworld/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Set information about this user
 set(varUserName "royalgeekworld")
+set(varUserID "1251")
 
 add_subdirectory(nginx)
 add_subdirectory(php)
