--- a/configuration/mcp/palemoon/CMakeLists.txt
+++ b/configuration/mcp/palemoon/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Set information about this user
 set(varUserName "palemoon")
+set(varUserID "1250") # Change to 1400
 
 add_subdirectory(nginx)
 add_subdirectory(php)
