--- a/configuration/staff/valik/CMakeLists.txt
+++ b/configuration/staff/valik/CMakeLists.txt
@@ -1,10 +1,6 @@
-build_macro_mkPaths()
-SETUP_FINAL_TARGET()
-AURA_DEFINES()
-
-
 # Set information about this user
 set(varUserName "valik")
+set(varUserID "1150")
 
 add_subdirectory(nginx)
 add_subdirectory(php)
