--- a/configuration/unaffiliated/dovedesign/CMakeLists.txt
+++ b/configuration/unaffiliated/dovedesign/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Set information about this user
 set(varUserName "dovedesign")
+set(varUserID "1300")
 
 # Add Subdirectories
 add_subdirectory(nginx)
