Set System/Root varUserID

--- a/configuration/system/CMakeLists.txt
+++ b/configuration/system/CMakeLists.txt
@@ -1,6 +1,8 @@
 # Set the user class
 set(varUserClass "system")
 set(varUserName "root")
+set(varUserID "0")
+
 
 if(varTargetServerQuartz)
     add_subdirectory(bind)
